--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,7 +20,7 @@ nav{
         margin: 0;
         padding: 0;
         display:grid;
-        grid-template-columns: 12% 22% 22% 22% 22%;
+        grid-template-columns: 5% 20% 20% 20% 20%;
         justify-content: space-evenly;
         align-content: center;
         width: 100%;
@@ -34,9 +34,8 @@ nav{
         margin: 0;
     }
     img{
-        width: 50%;
+        max-width: 100%;
         height: auto;
-        padding: 0px 0px 0px 25px;
     }
     button{
         text-decoration: none;
